--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@
 /out-tsc
 
 # dependencies
-/node_modules
-
+# /node_modules
+.node_modules
 
 # IDEs and editors
 /.idea
@@ -40,3 +40,4 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+node_modules
