--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@nebular/security": "7.0.0",
     "@nebular/theme": "7.0.0",
     "@ngrx/effects": "^11.0.1",
+    "@ngrx/router-store": "^11.0.1",
     "@ngrx/store": "^11.0.1",
     "@ngrx/store-devtools": "^11.0.1",
     "@swimlane/ngx-charts": "^14.0.0",
